[metadata]
name = dml-nmr
version = 1.0
author = Pablo Unzueta
author_email = punzu001@ucr.edu
description = DML-NMR package for predicting accurate chemical shieldings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pablo-unzueta/dml-nmr
project_urls =
    Bug Tracker = https://github.com/pablo-unzueta/dml-nmr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
